openvino_bindings/src/bindings.h

typedef void* CGraphRunner;
typedef void* CSpeechToText;
typedef void* CLLMInference;
typedef void* CSentenceTransformer;
typedef void* CVLMInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
} Status;
typedef struct {
    enum StatusEnum status;
    const char* message;
    const char* value;
} StatusOrString;
typedef struct {
    enum StatusEnum status;
    const char* message;
    bool value;
} StatusOrBool;
typedef struct {
    enum StatusEnum status;
    const char* message;
    int value;
} StatusOrInt;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CGraphRunner value;
} StatusOrGraphRunner;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CSentenceTransformer value;
} StatusOrSentenceTransformer;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CSpeechToText value;
} StatusOrSpeechToText;
typedef struct {
    enum StatusEnum status;
    const char* message;
    CLLMInference value;
} StatusOrVLMInference;
typedef struct {
    enum StatusEnum status;
    const char* message;
    float* value;
    int size;
} StatusOrEmbeddings;
typedef struct {
    enum StatusEnum status;
    const char* message;
    VLMMetrics metrics;
    const char* value;
} StatusOrVLMModelResponse;
typedef void (*ImageInferenceCallbackFunction)(StatusOrString*);
typedef void (*VLMInferenceCallbackFunction)(StatusOrString*);
EXPORT Status* ttiInferenceClose(CLLMInference instance);
EXPORT StatusOrVLMInference* vlmInferenceOpen(const char* model_path, const char* device);
EXPORT Status* vlmInferenceSetListener(CVLMInference instance, VLMInferenceCallbackFunction callback);
EXPORT StatusOrVLMModelResponse* vlmInferencePrompt(CVLMInference instance, const char* message, int max_new_tokens);
EXPORT Status* vlmInferenceSetImagePaths(CVLMInference instance, const char** paths, int length);
EXPORT StatusOrBool* vlmInferenceHasModelIndex(CVLMInference instance);
EXPORT Status* vlmInferenceStop(CVLMInference instance);
EXPORT Status* vlmInferenceClose(CVLMInference instance);
EXPORT StatusOrGraphRunner* graphRunnerOpen(const char* graph);
EXPORT Status* graphRunnerQueueImage(CGraphRunner instance, const char* name, int timestamp, unsigned char* image_data, const size_t data_length);
EXPORT Status* graphRunnerQueueSerializationOutput(CGraphRunner instance, const char* name, int timestamp, bool json, bool csv, bool overlay, bool source);
EXPORT StatusOrString* graphRunnerGet(CGraphRunner instance);
EXPORT Status* graphRunnerStop(CGraphRunner instance);
EXPORT Status* graphRunnerStartCamera(CGraphRunner instance, int cameraIndex, ImageInferenceCallbackFunction callback, bool json, bool csv, bool overlay, bool source);
EXPORT StatusOrInt* graphRunnerGetTimestamp(CGraphRunner instance);
EXPORT Status* graphRunnerStopCamera(CGraphRunner instance);
EXPORT Status* graphRunnerSetCameraResolution(CGraphRunner instance, int width, int height);
EXPORT StatusOrSentenceTransformer* sentenceTransformerOpen(const char* model_path, const char* device);
EXPORT StatusOrEmbeddings* sentenceTransformerGenerate(CSentenceTransformer instance, const char* prompt);
EXPORT Status* sentenceTransformerClose(CSentenceTransformer instance);
EXPORT StatusOrSpeechToText* speechToTextOpen(const char* model_path, const char* device);