lib/interop/generated_bindings.dart


  ffi.Pointer<Status> ttiInferenceClose(
    CLLMInference instance,
  ) {
    return _ttiInferenceClose(
      instance,
    );
  }

  late final _ttiInferenceClosePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CLLMInference)>>(
          'ttiInferenceClose');
  late final _ttiInferenceClose = _ttiInferenceClosePtr
      .asFunction<ffi.Pointer<Status> Function(CLLMInference)>();

  ffi.Pointer<StatusOrVLMInference> vlmInferenceOpen(
    ffi.Pointer<pkg_ffi.Utf8> model_path,
    ffi.Pointer<pkg_ffi.Utf8> device,
  ) {
    return _vlmInferenceOpen(
      model_path,
      device,
    );
  }

  late final _vlmInferenceOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrVLMInference> Function(ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Pointer<pkg_ffi.Utf8>)>>('vlmInferenceOpen');
  late final _vlmInferenceOpen = _vlmInferenceOpenPtr.asFunction<
      ffi.Pointer<StatusOrVLMInference> Function(
          ffi.Pointer<pkg_ffi.Utf8>, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<Status> vlmInferenceSetListener(
    CVLMInference instance,
    VLMInferenceCallbackFunction callback,
  ) {
    return _vlmInferenceSetListener(
      instance,
      callback,
    );
  }

  late final _vlmInferenceSetListenerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(CVLMInference,
              VLMInferenceCallbackFunction)>>('vlmInferenceSetListener');
  late final _vlmInferenceSetListener = _vlmInferenceSetListenerPtr.asFunction<
      ffi.Pointer<Status> Function(
          CVLMInference, VLMInferenceCallbackFunction)>();

  ffi.Pointer<StatusOrVLMModelResponse> vlmInferencePrompt(
    CVLMInference instance,
    ffi.Pointer<pkg_ffi.Utf8> message,
    int max_new_tokens,
  ) {
    return _vlmInferencePrompt(
      instance,
      message,
      max_new_tokens,
    );
  }

  late final _vlmInferencePromptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrVLMModelResponse> Function(CVLMInference,
              ffi.Pointer<pkg_ffi.Utf8>, ffi.Int)>>('vlmInferencePrompt');
  late final _vlmInferencePrompt = _vlmInferencePromptPtr.asFunction<
      ffi.Pointer<StatusOrVLMModelResponse> Function(
          CVLMInference, ffi.Pointer<pkg_ffi.Utf8>, int)>();

  ffi.Pointer<Status> vlmInferenceSetImagePaths(
    CVLMInference instance,
    ffi.Pointer<ffi.Pointer<pkg_ffi.Utf8>> paths,
    int length,
  ) {
    return _vlmInferenceSetImagePaths(
      instance,
      paths,
      length,
    );
  }

  late final _vlmInferenceSetImagePathsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(
              CVLMInference,
              ffi.Pointer<ffi.Pointer<pkg_ffi.Utf8>>,
              ffi.Int)>>('vlmInferenceSetImagePaths');
  late final _vlmInferenceSetImagePaths =
      _vlmInferenceSetImagePathsPtr.asFunction<
          ffi.Pointer<Status> Function(
              CVLMInference, ffi.Pointer<ffi.Pointer<pkg_ffi.Utf8>>, int)>();

  ffi.Pointer<StatusOrBool> vlmInferenceHasModelIndex(
    CVLMInference instance,
  ) {
    return _vlmInferenceHasModelIndex(
      instance,
    );
  }

  late final _vlmInferenceHasModelIndexPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<StatusOrBool> Function(CVLMInference)>>(
      'vlmInferenceHasModelIndex');
  late final _vlmInferenceHasModelIndex = _vlmInferenceHasModelIndexPtr
      .asFunction<ffi.Pointer<StatusOrBool> Function(CVLMInference)>();

  ffi.Pointer<Status> vlmInferenceStop(
    CVLMInference instance,
  ) {
    return _vlmInferenceStop(
      instance,
    );
  }

  late final _vlmInferenceStopPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CVLMInference)>>(
          'vlmInferenceStop');
  late final _vlmInferenceStop = _vlmInferenceStopPtr
      .asFunction<ffi.Pointer<Status> Function(CVLMInference)>();

  ffi.Pointer<Status> vlmInferenceClose(
    CVLMInference instance,
  ) {
    return _vlmInferenceClose(
      instance,
    );
  }

  late final _vlmInferenceClosePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CVLMInference)>>(
          'vlmInferenceClose');
  late final _vlmInferenceClose = _vlmInferenceClosePtr
      .asFunction<ffi.Pointer<Status> Function(CVLMInference)>();

  ffi.Pointer<StatusOrGraphRunner> graphRunnerOpen(
    ffi.Pointer<pkg_ffi.Utf8> graph,
  ) {
    return _graphRunnerOpen(
      graph,
    );
  }

  late final _graphRunnerOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrGraphRunner> Function(
              ffi.Pointer<pkg_ffi.Utf8>)>>('graphRunnerOpen');
  late final _graphRunnerOpen = _graphRunnerOpenPtr.asFunction<
      ffi.Pointer<StatusOrGraphRunner> Function(ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<Status> graphRunnerQueueImage(
    CGraphRunner instance,
    ffi.Pointer<pkg_ffi.Utf8> name,
    int timestamp,
    ffi.Pointer<ffi.Uint8> image_data,
    int data_length,
  ) {
    return _graphRunnerQueueImage(
      instance,
      name,
      timestamp,
      image_data,
      data_length,
    );
  }

  late final _graphRunnerQueueImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(
              CGraphRunner,
              ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Int,
              ffi.Pointer<ffi.Uint8>,
              ffi.Size)>>('graphRunnerQueueImage');
  late final _graphRunnerQueueImage = _graphRunnerQueueImagePtr.asFunction<
      ffi.Pointer<Status> Function(CGraphRunner, ffi.Pointer<pkg_ffi.Utf8>, int,
          ffi.Pointer<ffi.Uint8>, int)>();

  ffi.Pointer<Status> graphRunnerQueueSerializationOutput(
    CGraphRunner instance,
    ffi.Pointer<pkg_ffi.Utf8> name,
    int timestamp,
    bool json,
    bool csv,
    bool overlay,
    bool source,
  ) {
    return _graphRunnerQueueSerializationOutput(
      instance,
      name,
      timestamp,
      json,
      csv,
      overlay,
      source,
    );
  }

  late final _graphRunnerQueueSerializationOutputPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(
              CGraphRunner,
              ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Int,
              ffi.Bool,
              ffi.Bool,
              ffi.Bool,
              ffi.Bool)>>('graphRunnerQueueSerializationOutput');
  late final _graphRunnerQueueSerializationOutput =
      _graphRunnerQueueSerializationOutputPtr.asFunction<
          ffi.Pointer<Status> Function(CGraphRunner, ffi.Pointer<pkg_ffi.Utf8>,
              int, bool, bool, bool, bool)>();

  ffi.Pointer<StatusOrString> graphRunnerGet(
    CGraphRunner instance,
  ) {
    return _graphRunnerGet(
      instance,
    );
  }

  late final _graphRunnerGetPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<StatusOrString> Function(CGraphRunner)>>(
      'graphRunnerGet');
  late final _graphRunnerGet = _graphRunnerGetPtr
      .asFunction<ffi.Pointer<StatusOrString> Function(CGraphRunner)>();

  ffi.Pointer<Status> graphRunnerStop(
    CGraphRunner instance,
  ) {
    return _graphRunnerStop(
      instance,
    );
  }

  late final _graphRunnerStopPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CGraphRunner)>>(
          'graphRunnerStop');
  late final _graphRunnerStop = _graphRunnerStopPtr
      .asFunction<ffi.Pointer<Status> Function(CGraphRunner)>();

  ffi.Pointer<Status> graphRunnerStartCamera(
    CGraphRunner instance,
    int cameraIndex,
    ImageInferenceCallbackFunction callback,
    bool json,
    bool csv,
    bool overlay,
    bool source,
  ) {
    return _graphRunnerStartCamera(
      instance,
      cameraIndex,
      callback,
      json,
      csv,
      overlay,
      source,
    );
  }

  late final _graphRunnerStartCameraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(
              CGraphRunner,
              ffi.Int,
              ImageInferenceCallbackFunction,
              ffi.Bool,
              ffi.Bool,
              ffi.Bool,
              ffi.Bool)>>('graphRunnerStartCamera');
  late final _graphRunnerStartCamera = _graphRunnerStartCameraPtr.asFunction<
      ffi.Pointer<Status> Function(CGraphRunner, int,
          ImageInferenceCallbackFunction, bool, bool, bool, bool)>();

  ffi.Pointer<StatusOrInt> graphRunnerGetTimestamp(
    CGraphRunner instance,
  ) {
    return _graphRunnerGetTimestamp(
      instance,
    );
  }

  late final _graphRunnerGetTimestampPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<StatusOrInt> Function(CGraphRunner)>>(
      'graphRunnerGetTimestamp');
  late final _graphRunnerGetTimestamp = _graphRunnerGetTimestampPtr
      .asFunction<ffi.Pointer<StatusOrInt> Function(CGraphRunner)>();

  ffi.Pointer<Status> graphRunnerStopCamera(
    CGraphRunner instance,
  ) {
    return _graphRunnerStopCamera(
      instance,
    );
  }

  late final _graphRunnerStopCameraPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<Status> Function(CGraphRunner)>>(
          'graphRunnerStopCamera');
  late final _graphRunnerStopCamera = _graphRunnerStopCameraPtr
      .asFunction<ffi.Pointer<Status> Function(CGraphRunner)>();

  ffi.Pointer<Status> graphRunnerSetCameraResolution(
    CGraphRunner instance,
    int width,
    int height,
  ) {
    return _graphRunnerSetCameraResolution(
      instance,
      width,
      height,
    );
  }

  late final _graphRunnerSetCameraResolutionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Status> Function(CGraphRunner, ffi.Int,
              ffi.Int)>>('graphRunnerSetCameraResolution');
  late final _graphRunnerSetCameraResolution =
      _graphRunnerSetCameraResolutionPtr
          .asFunction<ffi.Pointer<Status> Function(CGraphRunner, int, int)>();

  ffi.Pointer<StatusOrSentenceTransformer> sentenceTransformerOpen(
    ffi.Pointer<pkg_ffi.Utf8> model_path,
    ffi.Pointer<pkg_ffi.Utf8> device,
  ) {
    return _sentenceTransformerOpen(
      model_path,
      device,
    );
  }

  late final _sentenceTransformerOpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrSentenceTransformer> Function(
              ffi.Pointer<pkg_ffi.Utf8>,
              ffi.Pointer<pkg_ffi.Utf8>)>>('sentenceTransformerOpen');
  late final _sentenceTransformerOpen = _sentenceTransformerOpenPtr.asFunction<
      ffi.Pointer<StatusOrSentenceTransformer> Function(
          ffi.Pointer<pkg_ffi.Utf8>, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<StatusOrEmbeddings> sentenceTransformerGenerate(
    CSentenceTransformer instance,
    ffi.Pointer<pkg_ffi.Utf8> prompt,
  ) {
    return _sentenceTransformerGenerate(
      instance,
      prompt,
    );
  }

  late final _sentenceTransformerGeneratePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<StatusOrEmbeddings> Function(CSentenceTransformer,
              ffi.Pointer<pkg_ffi.Utf8>)>>('sentenceTransformerGenerate');
  late final _sentenceTransformerGenerate =
      _sentenceTransformerGeneratePtr.asFunction<
          ffi.Pointer<StatusOrEmbeddings> Function(
              CSentenceTransformer, ffi.Pointer<pkg_ffi.Utf8>)>();

  ffi.Pointer<Status> sentenceTransformerClose(
    CSentenceTransformer instance,
  ) {
    return _sentenceTransformerClose(
      instance,
    );
  }

  late final _sentenceTransformerClosePtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<Status> Function(CSentenceTransformer)>>(
      'sentenceTransformerClose');
  late final _sentenceTransformerClose = _sentenceTransformerClosePtr
      .asFunction<ffi.Pointer<Status> Function(CSentenceTransformer)>();

  ffi.Pointer<StatusOrSpeechToText> speechToTextOpen(
    ffi.Pointer<pkg_ffi.Utf8> model_path,
    ffi.Pointer<pkg_ffi.Utf8> device,
  ) {
    return _speechToTextOpen(
      model_path,
      device,
    );
  }
